version/0.4/_sources/examples/osl_server/01_basic_queries.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/osl_server/01_basic_queries.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_osl_server_01_basic_queries.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_osl_server_01_basic_queries.py:


.. _ref_osl_server_basic_queries:

Basic server queries
--------------------

This example demonstrates how to use PyOptiSLang to perform basic
queries/commands on the optiSLang server using the explicit API.

.. GENERATED FROM PYTHON SOURCE LINES 13-16

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 16-23

.. code-block:: default


    from pathlib import Path
    import tempfile

    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 24-27

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 27-35

.. code-block:: default


    example_path = examples.get_files("ten_bar_truss")[1][0]
    tmp_dir = Path(tempfile.mkdtemp())
    file_path = tmp_dir / "evaluate_design_example.opf"

    osl = Optislang(project_path=example_path)
    osl.save_as(file_path)


.. GENERATED FROM PYTHON SOURCE LINES 36-39

Get optiSLang server connection info
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Print osl server host and port.

.. GENERATED FROM PYTHON SOURCE LINES 39-42

.. code-block:: default

    print(f"Server host/address: {osl.get_osl_server().get_host()}")
    print(f"Server port: {osl.get_osl_server().get_port()}")


.. GENERATED FROM PYTHON SOURCE LINES 43-46

Get optiSLang info and optiSLang server info
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Print optiSLang and optiSLang server info.

.. GENERATED FROM PYTHON SOURCE LINES 46-50

.. code-block:: default

    print(f"Server info: {osl.get_osl_server().get_server_info()}")
    print(f"optiSLang version: {osl.get_osl_server().get_osl_version()}")
    print(f"optiSLang version string: {osl.get_osl_server().get_osl_version_string()}")


.. GENERATED FROM PYTHON SOURCE LINES 51-54

Get basic project info
~~~~~~~~~~~~~~~~~~~~~~
Query basic server/project info.

.. GENERATED FROM PYTHON SOURCE LINES 54-63

.. code-block:: default


    print(f"Basic project info: {osl.get_osl_server().get_basic_project_info()}")
    print(f"Project description: {osl.get_osl_server().get_project_description()}")
    print(f"Project file location: {osl.get_osl_server().get_project_location()}")
    print(f"Project working directory: {osl.get_osl_server().get_working_dir()}")
    print(f"Project name: {osl.get_osl_server().get_project_name()}")
    print(f"Project (run) status: {osl.get_osl_server().get_project_status()}")
    print(f"Full project tree: {osl.get_osl_server().get_full_project_tree()}")


.. GENERATED FROM PYTHON SOURCE LINES 64-67

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 67-69

.. code-block:: default


    osl.dispose()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_osl_server_01_basic_queries.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_basic_queries.py <01_basic_queries.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_basic_queries.ipynb <01_basic_queries.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
